# STM32-UART-Flash-Tool

./: Cargo.toml  README.md
.cargo/: config.toml
src/: flasher.rs  helper.rs  lib.rs  main.rs
