[package]
name = "stm32-firmware-loader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stm32_firmware_loader"
path = "src/lib.rs"

[dependencies]
clap = "^3"
gpio-cdev = "0.6"
log = "0.4"
parse_int = "0.6"
serialport = "^3"
